--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,6 @@ sqlalchemy==2.0.23
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
-google-generativeai==0.3.1
+langchain-groq==0.1.0
 python-dotenv==1.0.0
 PyPDF2==3.0.1
